[tool.poetry]
name = "fms-manual"
version = "9999"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.12"
doc8 = "==1.1.1"
latex = "==0.7.0"
sphinx = "==7.2.6"
sphinx-hoverxref = "==1.3.0"
sphinx-notfound-page = "==1.0.0"
sphinx-design = "==0.5.0"
sphinx-rtd-theme = "==2.0.0"
sphinx-version-warning = "==1.1.2"
sphinxcontrib-ghcontributors = "==0.2.3"
sphinxcontrib-svg2pdfconverter = "==1.2.2"
sphinxext-opengraph = "==0.9.1"
sphinxext-rediraffe = "==0.2.7"
sphinxext-remoteliteralinclude = "==0.4.0"
sphinxext-toptranslators = "==0.1.3"
sphinxext-delta = "==0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
